# dnlib-mcp

./: .gitignore  .mcp.json  README.md  README_CN.md  pyproject.toml  requirements.txt  setup.bat
ce-mcp/: README.md  TEST.md
ce-mcp/ce-plugin/: README.md  TEST.md  ce-mcp-plugin.c  ce-mcp-plugin.def  plugin-analyze.c  plugin-core.c  plugin-gen.c  plugin.h
ce-mcp/src/: __init__.py  bridge.py  server.py
docs/: ce-design.md  ce-prompt.md  ce-sdk-api-analysis.md
src/: server.py
src/backends/: __init__.py  de4dot_backend.py  dnlib_backend.py
